--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,23 @@
 cmake_minimum_required(VERSION 3.17)
 project(LeetCode-and-such-stuff)
 set(CMAKE_CXX_STANDARD 17)
-set(TESTS "disabled" CACHE STRING "Enables tests using gtest")
+
+option(PACKAGE_TESTS "Build the tests" ON)
+if(PACKAGE_TESTS)
+    enable_testing()
+    include(googletest)
+    include(CTest)
+    add_subdirectory("${PROJECT_SOURCE_DIR}/googletest" "googletest")
+    mark_as_advanced(
+        BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
+        gmock_build_tests gtest_build_samples gtest_build_tests
+        gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
+    )
+    macro(package_add_test TESTNAME)
+        add_executable(${TESTNAME} ${ARGN})
+        target_link_libraries(${TESTNAME} gtest gmock gtest_main)
+        add_test(NAME ${TESTNAME} COMMAND ${TESTNAME})
+    endmacro()
+endif()
 
 add_subdirectory(IntervalMap)
