more cmake configs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.17)
 project(LeetCode-and-such-stuff)
 set(CMAKE_CXX_STANDARD 17)
 
+macro(create_project projectName)
+    get_filename_component(${projectName} ${CMAKE_CURRENT_LIST_DIR} NAME)
+endmacro()
+
 option(PACKAGE_TESTS "Build the tests" ON)
 if(PACKAGE_TESTS)
     enable_testing()
@@ -21,3 +25,4 @@ if(PACKAGE_TESTS)
 endif()
 
 add_subdirectory(IntervalMap)
+add_subdirectory(Candy)
